use table for partial layout (to avoid keypad layout bug and getOffset bug)

--- a/static/css/palidict.css
+++ b/static/css/palidict.css
@@ -109,7 +109,6 @@ a.menuItem:hover {
   text-align: left;
   border-bottom:1px dotted black;
   padding:10px;
-  height: 50px;
 }
 
 #rightAD {
@@ -121,9 +120,9 @@ a.menuItem:hover {
 .resultCurvedEdges {
   border:10px solid #98FB98;
   border-radius:13px;
-  width: 98%;
-  margin-left: 1%;
-  margin-right: 1%;
+  width: 99%;
+  margin-left: .5%;
+  margin-right:.5%;
   margin-bottom: 1em;
 }
 
